src/p3/config/repo/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web-app
    namespace: dev
    labels:
      app: web-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: web-app
    template:
        metadata:
            labels:
                app: web-app
        spec:
            containers:
                - name: web-app
                  image: kobayashi82/iot-web-app:1.0.1
                  ports:
                      - containerPort: 80
