src/p3/config/repo/services.yaml
apiVersion: v1
kind: Service
metadata:
    name: web-app
    namespace: dev
    labels:
      app: web-app
spec:
    type: LoadBalancer
    selector:
        app: web-app
    ports:
        - port: 80
          targetPort: 80
