src/p3/config/repo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: web-app
    namespace: dev
spec:
    rules:
        - host: web-app.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: web-app
                            port:
                                number: 80
